B-F Sandbox Full-Backup/src/objects/Reconciliation__c.object
<CustomObject>
    <description>This object contains detailed information regarding each reconciliation that occurs.</description>
    <fields>
        <fullName>Account_Number1__c</fullName>
        <formula>Reconciliation_Accounts__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Prime__c</fullName>
        <formula>LEFT(Account_Number1__c, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Prime</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_USD__c</fullName>
        <description>Actual USD stored in SAP</description>
        <label>Actual - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance_Local__c</fullName>
        <description>Balance in local currency</description>
        <label>Balance - Local</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_USD__c</fullName>
        <formula>Balance_Local__c  *  Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Balance as calculated by exchange rate</inlineHelpText>
        <label>Balance - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <formula>Reconciliation_Accounts__r.Company_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Reconciliation__c</fullName>
        <label>Date of Reconciliation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>Reconciliation_Accounts__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <description>Stores exchange rate for calculations</description>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Explanation__c</fullName>
        <label>Proposed Adjustment Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <defaultValue>&quot;FY&quot;</defaultValue>
        <inlineHelpText>ex. FY12</inlineHelpText>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAE_Account_1__c</fullName>
        <description>first account to offset PA</description>
        <label>Account 1</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAE_Account_2__c</fullName>
        <label>Account 2</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAE_Account_3__c</fullName>
        <label>Account 3</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAE_Value_1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>First of 5 values to offset PA</description>
        <label>USD Value 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAE_Value_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>USD Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAE_Value_3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>USD Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Party_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Party Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reconciliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prepared_By__c</fullName>
        <formula>Reconciliation_Accounts__r.Party_Responsible__r.FirstName +&quot; &quot;+ Reconciliation_Accounts__r.Party_Responsible__r.LastName</formula>
        <label>Prepared By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Adjustment__c</fullName>
        <inlineHelpText>Please explain adjustment below and enter offsetting line items in the Proposed Adjustment Offsetting Entry section</inlineHelpText>
        <label>Proposed Adjustment - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reconciliation_Accounts__c</fullName>
        <label>Reconciliation Accounts</label>
        <referenceTo>Reconciliation_Accounts__c</referenceTo>
        <relationshipLabel>Reconciliations</relationshipLabel>
        <relationshipName>Reconciliations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reviewed_By__c</fullName>
        <formula>Reconciliation_Accounts__r.Reviewer__r.FirstName +&quot; &quot;+ Reconciliation_Accounts__r.Reviewer__r.LastName</formula>
        <label>Reviewed By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReconciliationsReviewer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Variance__c</fullName>
        <description>Difference between converted USD and actual USD</description>
        <formula>Balance_USD__c - Actual_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated Balance - Actual Balance (USD)</inlineHelpText>
        <label>FX Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Reconciliation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>Balance_Local__c</columns>
        <columns>Exchange_Rate__c</columns>
        <columns>Balance_USD__c</columns>
        <columns>Actual_USD__c</columns>
        <columns>Variance__c</columns>
        <columns>Status__c</columns>
        <columns>Party_Responsible__c</columns>
        <columns>Reviewer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Reconciliation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reconciliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Proposed_Adjustment_Entry</fullName>
        <active>true</active>
        <description>Make sure the proposed adjustment entry values add up to the opposite of the proposed adjustment</description>
        <errorConditionFormula>-Proposed_Adjustment__c   &lt;&gt;  PAE_Value_1__c + PAE_Value_2__c + PAE_Value_3__c +  PAE_Value_4__c + PAE_Value_5__c</errorConditionFormula>
        <errorMessage>Please make sure the values in the in the Proposed Adjustment Entry section completely offset the Proposed Adjustment field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_PA_Explanation</fullName>
        <active>true</active>
        <description>require explanation field if proposed adjustment is not 0</description>
        <errorConditionFormula>Proposed_Adjustment__c &lt;&gt; 0 &amp;&amp;  ISBLANK( Explanation__c )</errorConditionFormula>
        <errorDisplayField>Explanation__c</errorDisplayField>
        <errorMessage>Please enter an explanation for the Proposed Adjustment.</errorMessage>
    </validationRules>
</CustomObject>